# victor

./: .gitignore  README.md  environment.yml  operative.py  play.py  pyproject.toml  spymaster.py
words/: all.txt  blue.txt  red.txt  yellow.txt
