[tool.poetry]
name = "victor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^2.17.4"
cython = "^0.29.35"
nltk = "^3.8.1"
matplot = "^0.1.9"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
fuzzywuzzy = "^0.18.0"
pandas = "^2.0.3"
gensim = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
